<resources>
    <string name="app_name">DBExam</string>
    <string name="student_id">Student ID</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="student_name">Student Name</string>
    <string name="student_number">Student Number</string>
    <string name="add">ADD</string>
    <string name="findName">FIND (By Name)</string>
    <string name="findNum">FIND (By Num)</string>
    <string name="delete">DELETE</string>
    <string name="delete_all">DELETE ALL</string>

</resources>
